<resources>
    <string name="app_name">Windesheim Schedules</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add_schedule">Add schedule</string>

    <string name="header_add_schedule">Add a schedule</string>
    <string name="header_manage_schedule">Schedule manager</string>

    <string name="info_schedule_manage">Reordering the schedules can be done by dragging and dropping the items in the list below.</string>
    <string name="info_schedule_add">Validation is partially implemented, auto-complete has yet to come. Please be sure to spell it correctly (capitalization matters!).</string>
    <string name="info_class_code">Class code</string>
    <string name="info_class_label">Class label</string>

    <string name="nav_action_settings">Settings</string>
    <string name="nav_action_add">Add schedule</string>
    <string name="nav_action_delete">Delete inactive schedules</string>
    <string name="nav_action_manage">Manage schedules</string>
    <string name="nav_action_toggle">Toggle view</string>

    <string name="toast_none_deleted">No inactive schedules found</string>

    <string name="project_author" translatable="false">Leon Kolthoff</string>
    <string name="project_links" translatable="false">Schedules | github.com/linklux</string>

    <string name="no_schedules">No classes found today</string>
    <string name="cheering" translatable="false">\\o/</string>
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string-array name="pref_list_weeks" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
