<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/schedule_add"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_action_add"/>
    <item
        android:id="@+id/schedule_manage"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_action_manage"/>
    <item
        android:id="@+id/schedule_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/nav_action_delete"/>
    <item
        android:id="@+id/toggle_view"
        android:icon="@drawable/ic_toggle_view"
        android:title="@string/nav_action_toggle"/>
    <item
        android:id="@+id/settings_view"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_action_settings"/>
</menu>
