<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/schedule_add"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_action_add"
        app:showAsAction="never"/>
    <item
        android:id="@+id/schedule_manage"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_action_manage"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toggle_view"
        android:icon="@drawable/ic_toggle_view"
        android:title="@string/nav_action_toggle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings_view"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_action_settings"
        app:showAsAction="never"/>
</menu>
