<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLight"
    android:padding="@dimen/text_margin"
    tools:context="io.linksoft.schedules.fragments.AddDialogFragment">

    <TextView
        android:id="@+id/add_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/header_add_schedule"
        android:textColor="@color/colorDark"
        android:textSize="14dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/add_dialog_subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_dialog_header"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/info_schedule_add"
        android:textColor="@color/colorDark"/>

    <AutoCompleteTextView
        android:id="@+id/add_dialog_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_dialog_subheader"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/info_class_code"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorDark"
        android:textColorHint="@color/colorDarkT"/>

    <EditText
        android:id="@+id/add_dialog_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_dialog_class"
        android:layout_marginBottom="@dimen/text_margin"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/info_class_label"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorDark"
        android:textColorHint="@color/colorDarkT"/>

    <Button
        android:id="@+id/add_dialog_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/add_dialog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/action_cancel"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/add_dialog_submit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_dialog_label"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/action_add_schedule"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>
